--- a/1/5.Mandatory/public/siteInfo3/siteInfo3.html
+++ b/1/5.Mandatory/public/siteInfo3/siteInfo3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link href="../CssStyling/welcome.css" rel="stylesheet" type="text/css" />
-    <title>Document</title>
+    <title>Node.js app</title>
 </head>
 <body>
     
@@ -29,9 +29,14 @@
                 <a class="nav-link" href="/siteInfo3">Routing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/siteInfo4">Nodemon & cross-env</a>
+                <a class="nav-link" href="/siteInfo4">Nodemon & Cross-env</a>
               </li>
-             
+              <li class="nav-item">
+                <a class="nav-link" href="/siteInfo5">Environment variables</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/siteInfo6">CRUD api</a>
+              </li>
             </ul>
           </div>
         </div>
