--- a/1/9.Mandatory2/public/MainContent/mainContent.html
+++ b/1/9.Mandatory2/public/MainContent/mainContent.html
@@ -49,9 +49,9 @@
                 <div class="card">
                     <img src="images/slide-1.jpg  " alt="" class="card-img-top">
                     <div class="card-body">
-                        <h5>something</h5>
-                        <p class="card-text">kjsdfn</p>
-                        <div class="btn btn-primary">press it</div>
+                        <h5>About page</h5>
+                        <p class="card-text">Click here to see me resume</p>
+                        <div class="btn btn-primary">Click me</div>
                     </div>
                 </div>
             </div>
@@ -59,9 +59,9 @@
                 <div class="card m-b-5">
                     <img src="images/slide-1.jpg  " alt="" class="card-img-top">
                     <div class="card-body">
-                        <h5>something</h5>
-                        <p class="card-text">kjsdfn</p>
-                        <div class="btn btn-primary">press it</div>
+                        <h5>My project</h5>
+                        <p class="card-text">A list of projects i have been working on</p>
+                        <div class="btn btn-primary">No click me!</div>
                     </div>
                 </div>
             </div>
@@ -69,9 +69,9 @@
                 <div class="card m-b-3">
                     <img src="images/slide-1.jpg  " alt="" class="card-img-top">
                     <div class="card-body">
-                        <h5>something</h5>
-                        <p class="card-text">kjsdfn</p>
-                        <div class="btn btn-primary">press it</div>
+                        <h5>Technologies</h5>
+                        <p class="card-text">Here you can read about what Technologies i like to use</p>
+                        <div class="btn btn-primary">Or.. click me</div>
                     </div>
                 </div>
             </div>
